overlap and spacing content fixed

--- a/styles/main.css
+++ b/styles/main.css
@@ -41,7 +41,7 @@
 
 #module {
   position: relative;
-  min-height: 100vh;
+  min-height: 80vh;
 
   display: grid;
   grid-template-columns: 1fr;
